--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -916,6 +916,7 @@ Start Header Area
 }
 
 .header-bottom-area {
+    margin-top: 70px;
     background-color: #fff;
     padding: 30px 0;
     -webkit-transition: all 0.4s ease-out 0.2s;
@@ -2076,7 +2077,6 @@ Start Products Style
 }
 
 .single-product-item {
-        border: 1px solid #e8e7e7;
     padding: 20px;
     overflow: hidden;
     margin-top: 40px;
